# labDevXGroupElitekh25

./: .gitignore  CBinarySemaphore.cpp  CBinarySemaphore.h  CContainer.cpp  CContainer.h  CMakeLists.txt  CSharedMemory.cpp  CSharedMemory.h  FWAssertion.h  Global.h  README.md  main.cpp  nice_codesnippets.cpp
01_src/: CMakeLists.txt  ShowPid.cpp  canparser.cpp  main.cpp
01_src/09_swe_common/: CMakeLists.txt  ShowPid.cpp  canparser.cpp  device.h  runnable.h
01_src/vorbereitung_1/: CMakeLists.txt  Makefile  cmake_install.cmake  fork_config.h  main.cpp  mm_standard_usages.h
